webapp/channels/src/sass/components/_modal.scss
@use "utils/functions";
@use "utils/mixins";
@use "utils/variables";

@use 'sass:color';

.modal-backdrop {
    &.in {
        opacity: 0.64;
    }
}

.modal-body {
    overflow: auto;
    max-height: calc(90vh - 80px);
    padding: 4px 32px;

    &.overflow--visible {
        overflow: visible;
    }

    .manage-teams__teams {
        .MenuWrapper {
            position: static;
        }

        .Menu {
            top: inherit;
            margin-right: 20px;
        }
    }
}

.no-scroll {
    overflow: hidden !important;
}

.app__body {
    .modal {
        z-index: variables.$z-index-modal;
        color: rgb(var(--center-channel-color-rgb));

        .modal-content {
            border: var(--border-default);
            border-radius: var(--radius-l);
            background: var(--center-channel-bg);
        }
    }

    .edit-modal-body {
        overflow: visible;

        .textarea-label {
            margin-bottom: 10px;
            font-weight: 400;
        }

        .input-wrapper > div {
            display: flex;
            flex-direction: column;
        }

        .custom-textarea {
            height: auto !important;
            min-height: 46px;
            max-height: 60vh;
            flex-basis: 8em;
            -webkit-overflow-scrolling: touch;
            -ms-overflow-style: auto;
            overflow-y: auto;

            &.custom-textarea--preview {
                display: none;
            }

            &.textbox-preview-area {
                position: relative;
            }
        }

        .textarea-wrapper-preview {
            .custom-textarea.textbox-preview-area {
                display: block;
            }

            .textbox-edit-area {
                display: none;
            }
        }

        .edit-post-footer {
            position: relative;
            display: inline-block;
            font-size: 13px;

            .post-error {
                position: relative;
                top: 3px;
                margin-bottom: 0;
                font-size: 0.85em;
                font-weight: normal;
                opacity: 0.75;
            }
        }
    }
}

.row--invite {
    .col-sm-6 {
        &:first-child {
            padding-right: 0;
        }
    }
}

.modal__hint {
    display: block;
    margin: 0 0 10px;
    font-size: 0.9em;
    opacity: 0.8;
}

.modal__error {
    display: inline-block;
    margin-top: 6px;
    color: variables.$red;
    font-size: 0.95em;
}

.more-table {
    margin: 0;
    table-layout: fixed;
}
/* ... */

