Fix Playbooks participant modal alignment

--- a/webapp/channels/src/sass/components/_modal.scss
+++ b/webapp/channels/src/sass/components/_modal.scss
@@ -47,6 +47,27 @@
         }
     }
 
+    #become-participant-modal {
+        .GenericModal__header {
+            h1 {
+                align-self: flex-start;
+                margin-right: 0;
+                margin-left: 0;
+                text-align: left;
+            }
+        }
+
+        .modal-body {
+            > div {
+                text-align: left;
+
+                > div {
+                    justify-content: flex-start;
+                }
+            }
+        }
+    }
+
     .edit-modal-body {
         overflow: visible;
 
